test/expect/cmd.std-c++98-src-c.stderr.txt
^error: invalid argument '-std=c\+\+98' not allowed with 'C(/ObjC)?'$
